# Desafios-DIO

./: teste.bat
Construindo um Simulador de Piano com JavaScript e CSS/: index.html  script.js
Construindo uma Landing Page no Mundo Invertido com HTML e CSS/: index.html  script.js  styles.css
Criando Uma API Com FastAPI Utilizando TDD/: .gitignore  README.md  pyproject.toml
Criando Uma API Com FastAPI Utilizando TDD/docs/content/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md
Criando Uma API Com FastAPI Utilizando TDD/store/usecases/: product.py
Criando Uma API Com FastAPI Utilizando TDD/tests/: conftest.py
Criando Uma API Com FastAPI Utilizando TDD/tests/controllers/: test_product.py
Criando Uma API Com FastAPI Utilizando TDD/tests/schemas/: factories.py  test_product.py
Criando Uma API Com FastAPI Utilizando TDD/tests/usecases/: test_product.py
Criando um Jogo da memória com Emojis Utilizando Javascript/src/styles/: main.css
Criando um Jogo de Cartas do Yu-Gi-Oh! com JavaScript e CSS/: index.html  script.js
Criando um Jogo do Detona Ralph com JavaScript/: game.js  index.html  style.css
Criando_um_Personal_Trainer_IA_com_Boas_Praticas_de_Prompt_Engineer/: resultado.md
Multiverso Spider-Man Criando um Site com HTML CSS e JavaScript/: index.html  script.js  styles.css
Multiverso Spider-Man Criando um Site com HTML CSS e JavaScript/assets/css/: home-page-styles.css  internal.css
Ransomware/: desafio.py
desafio_programacao_hardware/: automacao_lampadas.c
pagina_web_utilizando_tags_aprendidas/: index.html
(+11 files in other folders)
