[tool.poetry]
name = "tdd-fastapi"
version = "0.0.1"
description = "Uma simples api utilizando o conceito TDD"
authors = ["fdtschmitz <fdtschmitz.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
motor = "^3.3.2"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.7.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
